<resources>
    <string name="app_name">Final Project C14</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="belumPunyaAkun">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="next">Continue</string>
    <string name="terms">By creating account means you are agree into our <font color="#2555B7">Terms and Conditions</font></string>
    <string name="findYourFlight">FIND YOUR FLIGHT</string>
    <string name="Comfiest">Comfiest flight with the Cheapst Price</string>
    <string name="hi">Hi User,</string>
    <string name="where">Where are you flying to?</string>
    <string name="oneway">Oneway</string>
    <string name="roundTrip">Round Trip</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="del">DEL</string>
    <string name="jfk">JFK</string>
    <string name="new_delhi">New Delhi</string>
    <string name="new_york">New York City</string>
    <string name="date">Thu, 15 Oct</string>
    <string name="returnn">RETURN</string>
    <string name="travel_date">TRAVEL DATE</string>
    <string name="traveller">TRAVELLER</string>
    <string name="str_class">CLASS</string>
    <string name="txt_traveller">1 Adult</string>
    <string name="economy">Economy</string>
    <string name="show">Show direct flights only</string>
    <string name="username_profile">Username</string>
    <string name="name_profile">Name</string>
    <string name="address_profile">Address</string>
    <string name="no_hp_profile">No Hp</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="about_me_setting">About Me</string>
    <string name="theme_setting">Theme</string>
    <string name="languages_setting">Languages</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="country">New Delhi, India</string>
    <string name="txt_nama">John F. Kennedy, NY</string>
    <string name="tanggal">23:45, Thu 15 Oct</string>
    <string name="terminal">Terminal 3</string>
    <string name="terminal2">Terminal 2</string>
    <string name="tiket">my ticket</string>
    <string name="book">Book</string>
    <string name="trips">Trips</string>
    <string name="maskapai">Qatar Airways</string>
    <string name="bisnis">Bisnis</string>
    <string name="harga">$150</string>
    <string name="txt_waktu">Waktu Pembayaran</string>
    <string name="waktu">05:31:00</string>
    <string name="pay">pay now</string>
    <string name="etiket">E-Ticket</string>
    <string name="jam">23 H</string>
    <string name="flighttiket">Flight Ticket</string>
    <string name="passengers">Passengers</string>
    <string name="txt_passengers">Guntur</string>
    <string name="flight">Flight</string>
    <string name="txt_flight">772896A45</string>
    <string name="txt_date">Date</string>
    <string name="gate">Gate</string>
    <string name="txt_gate">80 C</string>
    <string name="seat">Seat</string>
    <string name="txt_seat">1 B</string>
    <string name="txt_barcode">9824 0972 1742 1298</string>
    <string name="wishlist">Wishlist</string>
    <string name="traveler_details">TRAVELER DETAILS</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="payment_bank">Bank</string>
    <string name="payment_e_wallet">E - Wallet</string>
    <string name="payment_qris">QRIS</string>
    <string name="detail_travel_insurance">Travel Insurance</string>
    <string name="detail_convenience_fee">Convenience Fee</string>
    <string name="detail_total_fare">Total Fare</string>
    <string name="detail_fee_and_surcharges"><![CDATA[Fee & Surcharges]]></string>
    <string name="detail_tos">By Continuing to pay, you agree with our privacy policy and terms of service</string>
    <string name="select_travel_date">Select Travel Date</string>
    <string name="home">Home</string>
    <string name="whislist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="fee_surcharges">Fee surcharges</string>
    <string name="judul_notif">Booking Successfull</string>
    <string name="notification">Your booking is Successfull. Check your ticket in Book Page</string>
    <string name="txt_notif">Notification</string>
    <string name="popular_flight">Popular Flight</string>
    <string name="jakarta">Jakarta</string>
    <string name="jkt">(JKT)</string>
    <string name="search">Search Flights</string>
    <string name="chinese">Chinese New Year Promo</string>
    <string name="termscondition">*Terms and Condition</string>
    <string name="hotOffer">Hot Offer</string>
    <string name="important_info">Important Info for You</string>
    <string name="health">Health Protocol Update</string>
    <string name="info">Read info about travel regulation here!</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="update">Update</string>
    <string name="indonesia">Indonesia</string>
    <string name="idn">(IDN)</string>
    <string name="detailsPenumpang">These details must match\npassport and photo ID</string>
    <string name="tipePenumpang">Traveller Type</string>
    <string name="penumpang">Penumpang 1</string>
    <string name="choose">choose seat</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="select_id">SELECT ID</string>
    <string name="number_id">ID NUMBER</string>
    <string name="passenger_type">PASSENGER TYPE</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="covid19">COVID-19 VACCINE</string>
    <string name="travel_essentials">Travel Essentials</string>
    <string name="nul">" "</string>
    <string name="oneAdult">1 Adult</string>
    <string name="adult">Traveller Adult</string>
    <string name="twoAdult">2 Adults</string>
    <string name="threeAdult">3 Adults</string>
    <string name="fourAdult">4 Adults</string>
    <string name="fiveAdult">5 Adults</string>
    <string name="child">Traveller Child</string>
    <string name="oneChild">1 Child</string>
    <string name="twoChild">2 Children</string>
    <string name="threeChild">3 Children</string>
    <string name="save">save</string>
    <string name="semua">Semua</string>
    <string name="paycard">Pay by Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="name">Name</string>
    <string name="expiry">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="price_detail">Price Detail</string>
    <string name="fare">Fare</string>
    <string name="price">$150</string>
    <string name="other_fees">Other Fees</string>
    <string name="tax">Tax</string>
    <string name="included">Included</string>
    <string name="total">Total Payment</string>
    <string name="pay_e_wallet">Pay by E-wallet</string>
    <string name="gopay">Gopay</string>
    <string name="ovo">Ovo</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="dana">Dana</string>
    <string name="pay_qris">Pay by Qris</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="select_image">Select Image</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="penumpang2">PENUMPANG 2</string>
    <string name="penumpang3">PENUMPANG 3</string>
    <string name="value99plus">99+</string>
    <string name="moreThan99">99+</string>
    <string name="countOver">99+</string>
    <string name="overCount">99+</string>
    <string name="booking">Booking</string>
    <string name="ticketGo">TICKET GO</string>
    <string name="ticketBack">TICKET BACK</string>
    <string name="NIK">NIK</string>
    <string name="cancelTransaction">Canceled</string>
    <string name="pendingTransaction">Pending</string>
    <string name="successTransaction">Success</string>
    <string name="text_welcome">Welcome to Lef.id</string>
    <string name="sudahPunyaAkun">Already have an account?</string>
    <string name="cancel">Cancel</string>
    <string name="airplane">Airplane</string>
    <string name="tvprice">Price</string>
    <string name="payment_bankBRI">Bank BRI</string>
    <string name="payment_bankMandiri">Bank Mandiri</string>
    <string name="payment_bankBCA">Bank BCA</string>
    <string name="payment_bankBNI">Bank BNI</string>
    <string-array name="languages">
        <item>Indonesia</item>
        <item>English</item>
    </string-array>
    <string-array name="tipe_penumpang">
        <item>Adult</item>
        <item>Child</item>
    </string-array>
    <string-array name="select_id">
        <item>KTP</item>
        <item>Paspor</item>
    </string-array>
    <string-array name="kelas">
        <item name="eksekutif">Eksekutif</item>
        <item name="bisnis">Bisnis</item>
        <item name="ekonomi">Ekonomi</item>
    </string-array>
</resources>