<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/book"/>
    <item
        android:id="@+id/pastFragment"
        android:title="@string/book"
        app:showAsAction="always"
        android:icon="@drawable/trips"/>
    <item
        android:id="@+id/whislistFragment"
        android:title="@string/whislist"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_person_24"/>

</menu>