<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@drawable/eticket_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTigaMnt"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/economy"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:cornerRadius="15dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/flighttiket"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/passenger"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/passengers"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_passenger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/txt_passengers"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/flight"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/flight"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/no_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/txt_flight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvClass"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/str_class"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/economy"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/rubik_medium"
                        android:textColor="@color/black"
                        android:text="@string/jfk"
                        android:textSize="14sp" />

                    <ImageView
                        android:padding="10dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/plane_blk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/rubik_medium"
                        android:textColor="@color/black"
                        android:text="@string/jfk"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/date"
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/txt_date"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/date"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/gate"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/gate"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_gate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/txt_gate"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/seat"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/seat"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:text="@string/txt_seat"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dotted"
            android:layerType="software" />

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/barcode" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txt_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textColor="@color/black"
            android:text="@string/txt_barcode"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>