<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TravellerDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:paddingBottom="16dp">

        <LinearLayout
        android:padding ="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/adult"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/basic"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:text="@string/oneAdult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/basic"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:text="@string/twoAdult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/basic"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:text="@string/threeAdult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/basic"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:text="@string/fourAdult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/child"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/basic"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:text="@string/oneChild"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/basic"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:text="@string/twoChild"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="350dp"
            android:visibility="visible"
            android:layout_height="1dp"
            android:background="@color/abu"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/save"
            android:layout_width="120dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>