<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/button"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:text="@string/tiket"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="15dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginStart="170dp"
                android:src="@drawable/plane_blk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/from"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_dari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:textColor="@color/black"
                        android:text="@string/del"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_tempat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/country"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/tanggal"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/terminal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/terminal"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/to"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_ke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:textColor="@color/black"
                        android:text="@string/jfk"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_nama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_nama"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tanggal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/tanggal"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/terminal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/terminal2"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>